--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="pl">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Korepetycje IT</title>
-    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -84,7 +83,7 @@
                             <p>Moje social media:</p>
                             <!-- Dodać prawdziwe odnośniki -->
                             <div class="mediaP">
-                                <a href="https://www.facebook.com/profile.php?id=100011251756519&=7432645066541" target="_blank"><img src="img/social/fb.webp" alt="facebook social"></a>            
+                                <a href="https://www.facebook.com/" target="_blank"><img src="img/social/fb.webp" alt="facebook social"></a>            
                             </div>
                             <div class="mediaP">
                                 <a href="https://www.whatsapp.com/?lang=pl" target="_blank"><img src="img/social/whatsup.png" alt="whatsapp social"></a>                        
