Big code cleanup

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Korepetycje IT</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="shortcut icon" href="img/favicon/favicon.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Kanit&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -15,95 +16,73 @@
 <body>
     <div class="wrapper">
         <header>
-        </header>
-        <main>
-            <div class="menu">
+            <div class="navbar">
                 <button><a href="#offer">Korepetycje</a></button>
                 <button><a href="#price">Cennik</a></button>
                 <button><a href="#aboutMe">O mnie</a></button>
                 <button><a href="#contact">Kontakt</a></button>
             </div>
-            <div class="content">
-                <div id="offer">
-                    <div id="photoOffer" class="photo">
-                    </div>
-                    <div class="text">
-                        <h1>Korepetycje IT.</h1>
-                        <p>Oferuję korepetycje z różnych dziedzin informatyki na poziomie podstawowym jak i rozszeżonym.
-                        </p>
-                        <p>Chętnie pomogę w przygotowaniach do sprawdzianu, bądź matury.</p>
-                        <p>Służę pomocą z:</p>
-                        <ul>
-                            <li>Informatyka Ogólna,</li>
-                            <li>Sieci komputerowe.</li>
-                            <li>Bazy danych</li>
-                            <li>Programowanie obiektowe, C++ | C# | Python | Java </li>
-                            <li>Programowanie webowe, Html | Css | JavaScript </li>
-                        </ul>
-                    </div>
-                    <div class="goUp">
-                        <a href="#"><img src="img/button/up-arrow.png" alt="goUpArrow"></a>
-                    </div>
-                </div>
-                <div id="aboutMe">
-                    <div class="text">
-                        <h1>O mnie.</h1>
-                        <p>Nazywam się Mariusz i od ponad 10 lat pomagam uczniom i studentom w nauce przedmiotów
-                            ścisłych. Od 6 lat jest to mój jedyny zawód, który cały czas zgłębiam, stosując
-                            metodę ASAP - As Simple As Possible (Tak prosto jak tylko możliwe). Dzięki temu materiał,
-                            który w szkole wydawał się wzięty z kosmosu, u mnie staje się prosty, przejrzysty i
-                            zrozumiały. Ogromne doświadczenie w pracy z ludźmi w każdym wieku nauczyło mnie
-                            wyrozumiałości, cierpliwości i wytrwałości w tłumaczeniu tych samych zagadnień z wielu
-                            różnych perspektyw. Nie dziwi mnie żaden brak wiedzy. Widziałem już prawdopodobnie większość
-                            błędów, które można popełnić przy rozwiązywaniu zadań. </p>
-
-                    </div>
-                </div>
-                <div id="price">
-                    <div id="photoPrice" class="photo"></div>
-                    <div class="text">
-                        <h1>Cennik.</h1>
-                        <ul>
-                            <li>Lekcje indywidualne Matura rozszerzona 80zł - 60minut</li>
-                            <li>Lekcje indywidualne Matura podstawowa 60zł - 60minut</li>
-                            <li>Lekcje indywidualne Egzamin Technik Informatyk 60zł - 60minut</li>
-                            <li>Lekcje indywidualne Programowanie podstawy 40zł - 60 minut</li>
-                            <li>Lekcje indywidualne Programowanie średniozaawansowany 60zł - 60 minut</li>
-                        </ul>
-                        <p>Aktualnie brak możliwości lekcji grupowych.</p>
-                    </div>
-                </div>
-                <div id="contact">
-                    <div class="text">
-                        <h1>Kontakt.</h1>
-                        <h3>Skontaktuj się ze mną!</h3>
-                        <p>Numer telefonu: +48 668 436 174 </p>
-                        <p>Adres E-mail: korepetycjeIT@gmail.com</p>
-                        <div class="conMedia">
-                            <p>Moje social media:</p>
-                            <!-- Dodać prawdziwe odnośniki -->
-                            <div class="mediaP">
-                                <a href="https://www.facebook.com/" target="_blank"><img src="img/social/fb.webp" alt="facebook social"></a>            
-                            </div>
-                            <div class="mediaP">
-                                <a href="https://www.whatsapp.com/?lang=pl" target="_blank"><img src="img/social/whatsup.png" alt="whatsapp social"></a>                        
-                            </div>
-                            <div class="mediaP">
-                                <a href="https://www.instagram.com" target="_blank"><img src="img/social/insta.webp" alt="instagram social"></a>                  
-                            </div>
-                            <div class="mediaP">
-                                <a href="https://twitter.com/home" target="_blank"><img src="img/social/tw.png" alt="twitter social"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="goUp">
-                    <a href="#"><img src="img/button/up-arrow.png" alt="goUpArrow"></a>
+        </header>
+        <main>
+            <div id="offer" class="content">
+                <div id="photoOffer" class="photo"></div>
+                <h1>Korepetycje IT.</h1>
+                <p>Oferuję korepetycje z różnych dziedzin informatyki na poziomie podstawowym jak i rozszeżonym.
+                </p>
+                <p>Chętnie pomogę w przygotowaniach do sprawdzianu, bądź matury.</p>
+                <p>Służę pomocą z:</p>
+                <ul>
+                    <li>Informatyka Ogólna,</li>
+                    <li>Sieci komputerowe.</li>
+                    <li>Bazy danych</li>
+                    <li>Programowanie obiektowe, C++ | C# | Python | Java </li>
+                    <li>Programowanie webowe, Html | Css | JavaScript </li>
+                </ul>
+            </div>
+            <div id="aboutMe" class="content">
+                <h1>O mnie.</h1>
+                <p>Nazywam się Mariusz i od ponad 10 lat pomagam uczniom i studentom w nauce przedmiotów
+                    ścisłych. Od 6 lat jest to mój jedyny zawód, który cały czas zgłębiam, stosując
+                    metodę ASAP - As Simple As Possible (Tak prosto jak tylko możliwe). Dzięki temu materiał,
+                    który w szkole wydawał się wzięty z kosmosu, u mnie staje się prosty, przejrzysty i
+                    zrozumiały. Ogromne doświadczenie w pracy z ludźmi w każdym wieku nauczyło mnie
+                    wyrozumiałości, cierpliwości i wytrwałości w tłumaczeniu tych samych zagadnień z wielu
+                    różnych perspektyw. Nie dziwi mnie żaden brak wiedzy. Widziałem już prawdopodobnie większość
+                    błędów, które można popełnić przy rozwiązywaniu zadań. </p>
+            </div>
+            <div id="price" class="content">
+                <div id="photoPrice" class="photo"></div>
+                <h1>Cennik.</h1>
+                <ul>
+                    <li>Lekcje indywidualne Matura rozszerzona 80zł - 60minut</li>
+                    <li>Lekcje indywidualne Matura podstawowa 60zł - 60minut</li>
+                    <li>Lekcje indywidualne Egzamin Technik Informatyk 60zł - 60minut</li>
+                    <li>Lekcje indywidualne Programowanie podstawy 40zł - 60 minut</li>
+                    <li>Lekcje indywidualne Programowanie średniozaawansowany 60zł - 60 minut</li>
+                </ul>
+                <p>Aktualnie brak możliwości lekcji grupowych.</p>
+            </div>
+        </main>
+        <footer>
+            <div id="contact" class="content">
+                <h1>Kontakt.</h1>
+                <h3>Skontaktuj się ze mną!</h3>
+                <p>Numer telefonu: +22 068 1436 174 </p>
+                <p>Adres E-mail: korepetycjeIT@gmail.com</p>
+                <p>Moje social media:</p>
+                <!-- Dodać prawdziwe odnośniki -->
+                <div class="social clearfix">
+                    <a href="https://www.facebook.com/" target="_blank"><img src="img/social/fb.webp"
+                            alt="facebook social"></a>
+                    <a href="https://www.whatsapp.com/?lang=pl" target="_blank"><img src="img/social/whatsup.png"
+                            alt="whatsapp social"></a>
+                    <a href="https://www.instagram.com" target="_blank"><img src="img/social/insta.webp"
+                            alt="instagram social"></a>
+                    <a href="https://twitter.com/home" target="_blank"><img src="img/social/tw.png"
+                            alt="twitter social"></a>
                 </div>
             </div>
-            <footer>
-            </footer>
-        </main>
+        </footer>
     </div>
 </body>
 
