--- a/index.html
+++ b/index.html
@@ -24,20 +24,22 @@
             </div>
         </header>
         <main>
-            <div id="offer" class="content">
+            <div id="offer">
                 <div id="photoOffer" class="photo"></div>
-                <h1>Korepetycje IT.</h1>
-                <p>Oferuję korepetycje z różnych dziedzin informatyki na poziomie podstawowym jak i rozszeżonym.
-                </p>
-                <p>Chętnie pomogę w przygotowaniach do sprawdzianu, bądź matury.</p>
-                <p>Służę pomocą z:</p>
-                <ul>
-                    <li>Informatyka Ogólna,</li>
-                    <li>Sieci komputerowe.</li>
-                    <li>Bazy danych</li>
-                    <li>Programowanie obiektowe, C++ | C# | Python | Java </li>
-                    <li>Programowanie webowe, Html | Css | JavaScript </li>
-                </ul>
+                <div class="content">
+                    <h1>Korepetycje IT.</h1>
+                    <p>Oferuję korepetycje z różnych dziedzin informatyki na poziomie podstawowym jak i rozszeżonym.
+                    </p>
+                    <p>Chętnie pomogę w przygotowaniach do sprawdzianu, bądź matury.</p>
+                    <p>Służę pomocą z:</p>
+                    <ul>
+                        <li>Informatyka Ogólna,</li>
+                        <li>Sieci komputerowe.</li>
+                        <li>Bazy danych</li>
+                        <li>Programowanie obiektowe, C++ | C# | Python | Java </li>
+                        <li>Programowanie webowe, Html | Css | JavaScript </li>
+                    </ul>
+                </div>
             </div>
             <div id="aboutMe" class="content">
                 <h1>O mnie.</h1>
@@ -50,17 +52,19 @@
                     różnych perspektyw. Nie dziwi mnie żaden brak wiedzy. Widziałem już prawdopodobnie większość
                     błędów, które można popełnić przy rozwiązywaniu zadań. </p>
             </div>
-            <div id="price" class="content">
+            <div id="price">
                 <div id="photoPrice" class="photo"></div>
-                <h1>Cennik.</h1>
-                <ul>
-                    <li>Lekcje indywidualne Matura rozszerzona 80zł - 60minut</li>
-                    <li>Lekcje indywidualne Matura podstawowa 60zł - 60minut</li>
-                    <li>Lekcje indywidualne Egzamin Technik Informatyk 60zł - 60minut</li>
-                    <li>Lekcje indywidualne Programowanie podstawy 40zł - 60 minut</li>
-                    <li>Lekcje indywidualne Programowanie średniozaawansowany 60zł - 60 minut</li>
-                </ul>
-                <p>Aktualnie brak możliwości lekcji grupowych.</p>
+                <div class="content">
+                    <h1>Cennik.</h1>
+                    <ul>
+                        <li>Lekcje indywidualne Matura rozszerzona 80zł - 60minut</li>
+                        <li>Lekcje indywidualne Matura podstawowa 60zł - 60minut</li>
+                        <li>Lekcje indywidualne Egzamin Technik Informatyk 60zł - 60minut</li>
+                        <li>Lekcje indywidualne Programowanie podstawy 40zł - 60 minut</li>
+                        <li>Lekcje indywidualne Programowanie średniozaawansowany 60zł - 60 minut</li>
+                    </ul>
+                    <p>Aktualnie brak możliwości lekcji grupowych.</p>
+                </div>
             </div>
         </main>
         <footer>
